Atualizando meus projetos

--- a/Pagina do Instagram/index.html
+++ b/Pagina do Instagram/index.html
@@ -22,7 +22,7 @@
                 <a href="#" class="instagrma-logout">Remover conta</a>
             </div>
             <div class="group">
-                <p class="not-account">Não é doguinhodamesa</p>
+                <p class="not-account">Não é <span>doguinhodamesa</span>?</p>
                 <p class="not-account">
                     <a href="#" class="link-blue">Alternar contar</a>
                     ou
@@ -38,5 +38,7 @@
             </div>
         </div>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
